--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -1,5 +1,8 @@
 {
   "item.simplyswords.mythril_ingot": "Mythril Ingot",
   "item.simplyswords.mythril_nugget": "Mythril Nugget",
-  "item.simplyswords.electric_sword": "Electrite Sword"
+  "item.simplyswords.electric_sword": "Electrite Sword",
+  "item.simplyswords.rdiamond_sword": "Reinforced Diamond Sword",
+  "item.simplyswords.rdiamond_claymore": "Reinforced Diamond Claymore",
+  "item.simplyswords.electric_claymore": "Electrite Claymore"
 }
