--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -2,9 +2,11 @@
   "item.simplyswords.mythril_ingot": "Mythril Ingot",
   "item.simplyswords.mythril_nugget": "Mythril Nugget",
   "item.simplyswords.electric_sword": "Electrite Sword",
+  "item.simplyswords.curved_sword": "Curved Sword",
+  "item.simplyswords.runic_sword": "Runic Sword",
   "item.simplyswords.toxic_sword": "Toxinite Sword",
   "item.simplyswords.rdiamond_sword": "Reinforced Diamond Sword",
   "item.simplyswords.rdiamond_claymore": "Reinforced Diamond Claymore",
-  "item.simplyswords.toxin_claymore": "Toxinite Claymore",
+  "item.simplyswords.toxic_claymore": "Toxinite Claymore",
   "item.simplyswords.electric_claymore": "Electrite Claymore"
 }
