Added Brimstone Claymore Added new Brimstone (Burn) effect

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -25,5 +25,6 @@
   "itemGroup.simplyswords.simplyswords": "Simply Swords",
 
 
-  "effect.simplyswords.freeze": "Freeze"
+  "effect.simplyswords.freeze": "Freeze",
+  "effect.simplyswords.burn": "Burn"
 }
