Remodelled Rapiers Removed some bloat Mixed up weapon effects Adjusted config values Added additional rapiers Added twinblade Added Wildfire effect

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -1,8 +1,9 @@
 {
-  "item.simplyswords.electric_sword": "Electrite Sword",
   "item.simplyswords.curved_sword": "Iron Curved Sword",
   "item.simplyswords.gold_curved_sword": "Gold Curved Sword",
   "item.simplyswords.diamond_curved_sword": "Diamond Curved Sword",
+  "item.simplyswords.runic_rapier": "Runic Rapier",
+  "item.simplyswords.netherite_rapier": "Netherite Rapier",
   "item.simplyswords.diamond_rapier": "Diamond Rapier",
   "item.simplyswords.gold_rapier": "Gold Rapier",
   "item.simplyswords.iron_rapier": "Iron Rapier",
@@ -10,21 +11,18 @@
   "item.simplyswords.gold_runic_sword": "Gold Runic Sword",
   "item.simplyswords.diamond_runic_sword": "Diamond Runic Sword",
   "item.simplyswords.emerald_runic_sword": "Emerald Runic Sword",
-  "item.simplyswords.toxic_sword": "Toxinite Sword",
-  "item.simplyswords.rdiamond_sword": "Reinforced Diamond Sword",
   "item.simplyswords.diamond_claymore": "Diamond Claymore",
-  "item.simplyswords.runic_diamond_claymore": "Runic Diamond Claymore",
-  "item.simplyswords.toxic_diamond_claymore": "Toxic Diamond Claymore",
+  "item.simplyswords.runic_claymore": "Runic Claymore",
   "item.simplyswords.brimstone_claymore": "Brimstone Claymore",
   "item.simplyswords.gold_claymore": "Gold Claymore",
   "item.simplyswords.iron_claymore": "Iron Claymore",
-  "item.simplyswords.toxic_claymore": "Toxinite Claymore",
-  "item.simplyswords.electric_claymore": "Electrite Claymore",
   "item.simplyswords.runic_longsword": "Runic Longsword",
   "item.simplyswords.iron_longsword": "Iron Longsword",
   "item.simplyswords.gold_longsword": "Gold Longsword",
   "item.simplyswords.diamond_longsword": "Diamond Longsword",
   "item.simplyswords.netherite_longsword": "Netherite Longsword",
+  "item.simplyswords.toxic_longsword": "Longsword of the Plague",
+  "item.simplyswords.runic_twinblade": "Runic Twinblade",
 
 
   "itemGroup.simplyswords.simplyswords": "Simply Swords",
