--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -1,7 +1,8 @@
 {
-  "item.simplyswords.curved_sword": "Iron Curved Sword",
-  "item.simplyswords.gold_curved_sword": "Gold Curved Sword",
-  "item.simplyswords.diamond_curved_sword": "Diamond Curved Sword",
+  "item.simplyswords.iron_cutlass": "Iron Cutlass",
+  "item.simplyswords.gold_cutlass": "Gold Cutlass",
+  "item.simplyswords.diamond_cutlass": "Diamond Cutlass",
+  "item.simplyswords.netherite_cutlass": "Netherite Cutlass",
   "item.simplyswords.runic_rapier": "Runic Rapier",
   "item.simplyswords.netherite_rapier": "Netherite Rapier",
   "item.simplyswords.diamond_rapier": "Diamond Rapier",
@@ -23,6 +24,10 @@
   "item.simplyswords.netherite_longsword": "Netherite Longsword",
   "item.simplyswords.toxic_longsword": "Longsword of the Plague",
   "item.simplyswords.runic_twinblade": "Runic Twinblade",
+  "item.simplyswords.iron_twinblade": "Iron Twinblade",
+  "item.simplyswords.gold_twinblade": "Gold Twinblade",
+  "item.simplyswords.diamond_twinblade": "Diamond Twinblade",
+  "item.simplyswords.netherite_twinblade": "Netherite Twinblade",
 
 
   "itemGroup.simplyswords.simplyswords": "Simply Swords",
