--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -8,12 +8,15 @@
   "item.simplyswords.diamond_rapier": "Diamond Rapier",
   "item.simplyswords.gold_rapier": "Gold Rapier",
   "item.simplyswords.iron_rapier": "Iron Rapier",
+  "item.simplyswords.runic_cutlass": "Runic Cutlass",
   "item.simplyswords.runic_sword": "Runic Sword",
   "item.simplyswords.gold_runic_sword": "Gold Runic Sword",
   "item.simplyswords.diamond_runic_sword": "Diamond Runic Sword",
   "item.simplyswords.emerald_runic_sword": "Emerald Runic Sword",
   "item.simplyswords.diamond_claymore": "Diamond Claymore",
+  "item.simplyswords.netherite_claymore": "Netherite Claymore",
   "item.simplyswords.runic_claymore": "Runic Claymore",
+  "item.simplyswords.watcher_claymore": "The Watcher",
   "item.simplyswords.brimstone_claymore": "Brimstone Claymore",
   "item.simplyswords.gold_claymore": "Gold Claymore",
   "item.simplyswords.iron_claymore": "Iron Claymore",
