Added Storms Edge twinblade Added Storm status effect (AOE Lightning) Adjusted Watcher status effect - now hits all entities in proximity, except player but siphons less health Base wildfire chance reduced

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -27,6 +27,7 @@
   "item.simplyswords.gold_twinblade": "Gold Twinblade",
   "item.simplyswords.diamond_twinblade": "Diamond Twinblade",
   "item.simplyswords.netherite_twinblade": "Netherite Twinblade",
+  "item.simplyswords.storms_edge": "Storm's Edge",
 
 
   "itemGroup.simplyswords.simplyswords": "Simply Swords",
