Added Sword on a Stick (...yep) Tweaked Omen proc sound effect Added sound effect to Watcher proc

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -28,6 +28,7 @@
   "item.simplyswords.diamond_twinblade": "Diamond Twinblade",
   "item.simplyswords.netherite_twinblade": "Netherite Twinblade",
   "item.simplyswords.storms_edge": "Storm's Edge",
+  "item.simplyswords.sword_on_a_stick": "Sword on a Stick",
 
 
   "itemGroup.simplyswords.simplyswords": "Simply Swords",
