Now supports 1.19.x Storm proc only when raining Bramblethorn added (AoE poison/slow on hit)

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -29,6 +29,7 @@
   "item.simplyswords.netherite_twinblade": "Netherite Twinblade",
   "item.simplyswords.storms_edge": "Storm's Edge",
   "item.simplyswords.sword_on_a_stick": "Sword on a Stick",
+  "item.simplyswords.bramblethorn": "Bramblethorn",
 
 
   "itemGroup.simplyswords.simplyswords": "Simply Swords",
