Loot Drop rates lowered Loot table now allows for enchanted items Storm status effect will now only spawn lightning if distance to player is more than 5 blocks. Storm radius increased by 5 blocks in all directions to compensate Rapier speed amplifier reduced to 1 from 3 The Watcher has had its attack speed reduced by .1 Brimstone Claymore has had its attack range increased

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -34,6 +34,8 @@
 
   "itemGroup.simplyswords.simplyswords": "Simply Swords",
 
+  "message.simplyswords.testlightning": "We have not been damaged",
+
 
   "effect.simplyswords.freeze": "Freeze",
   "effect.simplyswords.burn": "Brimstone",
