Added runic warglaive, glaive, and katana

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -9,6 +9,7 @@
   "item.simplyswords.gold_rapier": "Gold Rapier",
   "item.simplyswords.iron_rapier": "Iron Rapier",
   "item.simplyswords.runic_cutlass": "Runic Cutlass",
+  "item.simplyswords.runic_katana": "Runic Katana",
   "item.simplyswords.diamond_claymore": "Diamond Claymore",
   "item.simplyswords.netherite_claymore": "Netherite Claymore",
   "item.simplyswords.runic_claymore": "Runic Claymore",
@@ -17,12 +18,14 @@
   "item.simplyswords.gold_claymore": "Gold Claymore",
   "item.simplyswords.iron_claymore": "Iron Claymore",
   "item.simplyswords.runic_longsword": "Runic Longsword",
+  "item.simplyswords.runic_warglaive": "Runic Warglaive",
   "item.simplyswords.iron_longsword": "Iron Longsword",
   "item.simplyswords.gold_longsword": "Gold Longsword",
   "item.simplyswords.diamond_longsword": "Diamond Longsword",
   "item.simplyswords.netherite_longsword": "Netherite Longsword",
   "item.simplyswords.toxic_longsword": "Longsword of the Plague",
   "item.simplyswords.runic_twinblade": "Runic Twinblade",
+  "item.simplyswords.runic_glaive": "Runic Glaive",
   "item.simplyswords.iron_twinblade": "Iron Twinblade",
   "item.simplyswords.gold_twinblade": "Gold Twinblade",
   "item.simplyswords.diamond_twinblade": "Diamond Twinblade",
