Iron > Netherite Katana added Iron > Netherite Sai added

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -8,6 +8,14 @@
   "item.simplyswords.diamond_rapier": "Diamond Rapier",
   "item.simplyswords.gold_rapier": "Gold Rapier",
   "item.simplyswords.iron_rapier": "Iron Rapier",
+  "item.simplyswords.iron_sai": "Iron Sai",
+  "item.simplyswords.diamond_sai": "Diamond Sai",
+  "item.simplyswords.gold_sai": "Gold Sai",
+  "item.simplyswords.netherite_sai": "Netherite Sai",
+  "item.simplyswords.iron_katana": "Iron Katana",
+  "item.simplyswords.gold_katana": "Gold Katana",
+  "item.simplyswords.diamond_katana": "Diamond Katana",
+  "item.simplyswords.netherite_katana": "Netherite Katana",
   "item.simplyswords.runic_cutlass": "Runic Cutlass",
   "item.simplyswords.runic_katana": "Runic Katana",
   "item.simplyswords.diamond_claymore": "Diamond Claymore",
