Added Iron > Netherite Spears Added Iron > Netherite Warglaives Added Stormbringer

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -8,6 +8,14 @@
   "item.simplyswords.diamond_rapier": "Diamond Rapier",
   "item.simplyswords.gold_rapier": "Gold Rapier",
   "item.simplyswords.iron_rapier": "Iron Rapier",
+  "item.simplyswords.iron_warglaive": "Iron Warglaive",
+  "item.simplyswords.gold_warglaive": "Gold Warglaive",
+  "item.simplyswords.diamond_warglaive": "Diamond Warglaive",
+  "item.simplyswords.netherite_warglaive": "Netherite Warglaive",
+  "item.simplyswords.iron_spear": "Iron Spear",
+  "item.simplyswords.gold_spear": "Gold Spear",
+  "item.simplyswords.diamond_spear": "Diamond Spear",
+  "item.simplyswords.netherite_spear": "Netherite Spear",
   "item.simplyswords.iron_sai": "Iron Sai",
   "item.simplyswords.diamond_sai": "Diamond Sai",
   "item.simplyswords.gold_sai": "Gold Sai",
@@ -39,6 +47,7 @@
   "item.simplyswords.diamond_twinblade": "Diamond Twinblade",
   "item.simplyswords.netherite_twinblade": "Netherite Twinblade",
   "item.simplyswords.storms_edge": "Storm's Edge",
+  "item.simplyswords.stormbringer": "Stormbringer",
   "item.simplyswords.sword_on_a_stick": "Sword on a Stick",
   "item.simplyswords.bramblethorn": "Bramblethorn",
 
