Warglaive models redesigned Spear models  redesigned Sais attributes adjusted

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -26,6 +26,7 @@
   "item.simplyswords.netherite_katana": "Netherite Katana",
   "item.simplyswords.runic_cutlass": "Runic Cutlass",
   "item.simplyswords.runic_katana": "Runic Katana",
+  "item.simplyswords.runic_sai": "Runic Sai",
   "item.simplyswords.diamond_claymore": "Diamond Claymore",
   "item.simplyswords.netherite_claymore": "Netherite Claymore",
   "item.simplyswords.runic_claymore": "Runic Claymore",
@@ -34,7 +35,7 @@
   "item.simplyswords.gold_claymore": "Gold Claymore",
   "item.simplyswords.iron_claymore": "Iron Claymore",
   "item.simplyswords.runic_longsword": "Runic Longsword",
-  "item.simplyswords.runic_warglaive": "Runic Warglaive",
+  "item.simplyswords.watching_warglaive": "Watching Warglaive",
   "item.simplyswords.iron_longsword": "Iron Longsword",
   "item.simplyswords.gold_longsword": "Gold Longsword",
   "item.simplyswords.diamond_longsword": "Diamond Longsword",
