Glaive implementation begun

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -8,6 +8,10 @@
   "item.simplyswords.diamond_rapier": "Diamond Rapier",
   "item.simplyswords.gold_rapier": "Gold Rapier",
   "item.simplyswords.iron_rapier": "Iron Rapier",
+  "item.simplyswords.iron_glaive": "Iron Glaive",
+  "item.simplyswords.gold_glaive": "Gold Glaive",
+  "item.simplyswords.diamond_glaive": "Diamond Glaive",
+  "item.simplyswords.netherite_glaive": "Netherite Glaive",
   "item.simplyswords.iron_warglaive": "Iron Warglaive",
   "item.simplyswords.gold_warglaive": "Gold Warglaive",
   "item.simplyswords.diamond_warglaive": "Diamond Warglaive",
