Custom Warglaive animations added Runic Glaive remodelled

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -47,6 +47,7 @@
   "item.simplyswords.toxic_longsword": "Longsword of the Plague",
   "item.simplyswords.runic_twinblade": "Runic Twinblade",
   "item.simplyswords.runic_glaive": "Runic Glaive",
+  "item.simplyswords.runic_spear": "Runic Spear",
   "item.simplyswords.iron_twinblade": "Iron Twinblade",
   "item.simplyswords.gold_twinblade": "Gold Twinblade",
   "item.simplyswords.diamond_twinblade": "Diamond Twinblade",
