--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -58,6 +58,18 @@
   "item.simplyswords.bramblethorn": "Bramblethorn",
 
 
+  "item.simplyswords.mythicmetals_compat.adamantite_claymore": "Adamantite Claymore",
+  "item.simplyswords.mythicmetals_compat.adamantite_cutlass": "Adamantite Cutlass",
+  "item.simplyswords.mythicmetals_compat.adamantite_glaive": "Adamantite Glaive",
+  "item.simplyswords.mythicmetals_compat.adamantite_katana": "Adamantite Katana",
+  "item.simplyswords.mythicmetals_compat.adamantite_longsword": "Adamantite Longsword",
+  "item.simplyswords.mythicmetals_compat.adamantite_rapier": "Adamantite Rapier",
+  "item.simplyswords.mythicmetals_compat.adamantite_sai": "Adamantite Sai",
+  "item.simplyswords.mythicmetals_compat.adamantite_spear": "Adamantite Spear",
+  "item.simplyswords.mythicmetals_compat.adamantite_twinblade": "Adamantite Twinblade",
+  "item.simplyswords.mythicmetals_compat.adamantite_warglaive": "Adamantite Warglaive",
+
+
   "itemGroup.simplyswords.simplyswords": "Simply Swords",
 
   "message.simplyswords.testlightning": "We have not been damaged",
