Mythic Metals Aquarium & Banglum added

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -58,16 +58,38 @@
   "item.simplyswords.bramblethorn": "Bramblethorn",
 
 
-  "item.simplyswords.mythicmetals_compat.adamantite_claymore": "Adamantite Claymore",
-  "item.simplyswords.mythicmetals_compat.adamantite_cutlass": "Adamantite Cutlass",
-  "item.simplyswords.mythicmetals_compat.adamantite_glaive": "Adamantite Glaive",
-  "item.simplyswords.mythicmetals_compat.adamantite_katana": "Adamantite Katana",
-  "item.simplyswords.mythicmetals_compat.adamantite_longsword": "Adamantite Longsword",
-  "item.simplyswords.mythicmetals_compat.adamantite_rapier": "Adamantite Rapier",
-  "item.simplyswords.mythicmetals_compat.adamantite_sai": "Adamantite Sai",
-  "item.simplyswords.mythicmetals_compat.adamantite_spear": "Adamantite Spear",
-  "item.simplyswords.mythicmetals_compat.adamantite_twinblade": "Adamantite Twinblade",
-  "item.simplyswords.mythicmetals_compat.adamantite_warglaive": "Adamantite Warglaive",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_claymore": "Adamantite Claymore",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_cutlass": "Adamantite Cutlass",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_glaive": "Adamantite Glaive",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_katana": "Adamantite Katana",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_longsword": "Adamantite Longsword",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_rapier": "Adamantite Rapier",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_sai": "Adamantite Sai",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_spear": "Adamantite Spear",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_twinblade": "Adamantite Twinblade",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_warglaive": "Adamantite Warglaive",
+
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_claymore": "Aquarium Claymore",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_cutlass": "Aquarium Cutlass",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_glaive": "Aquarium Glaive",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_katana": "Aquarium Katana",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_longsword": "aquarium Longsword",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_rapier": "Aquarium Rapier",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_sai": "Aquarium Sai",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_spear": "Aquarium Spear",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_twinblade": "Aquarium Twinblade",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_warglaive": "Aquarium Warglaive",
+
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_claymore": "Banglum Claymore",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_cutlass": "Banglum Cutlass",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_glaive": "Banglum Glaive",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_katana": "Banglum Katana",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_longsword": "Banglum Longsword",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_rapier": "Banglum Rapier",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_sai": "Banglum Sai",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_spear": "Banglum Spear",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_twinblade": "Banglum Twinblade",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_warglaive": "Banglum Warglaive",
 
 
   "itemGroup.simplyswords.simplyswords": "Simply Swords",
