Mythic Metals Bronze added Model imports for Great Hammer, Great Axe, Copper Sword, Durasteel Axe

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -190,16 +190,16 @@
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_twinblade": "Star_platinum Twinblade",
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_warglaive": "Star_platinum Warglaive",
 
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_claymore": "Kyber Claymore",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_cutlass": "Kyber Cutlass",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_glaive": "Kyber Glaive",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_katana": "Kyber Katana",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_longsword": "Kyber Longsword",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_rapier": "Kyber Rapier",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_sai": "Kyber Sai",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_spear": "Kyber Spear",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_twinblade": "Kyber Twinblade",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_warglaive": "Kyber Warglaive",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_claymore": "Bronze Claymore",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_cutlass": "Bronze Cutlass",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_glaive": "Bronze Glaive",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_katana": "Bronze Katana",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_longsword": "Bronze Longsword",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_rapier": "Bronze Rapier",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_sai": "Bronze Sai",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_spear": "Bronze Spear",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_twinblade": "Bronze Twinblade",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_warglaive": "Bronze Warglaive",
 
 
 
