Durasteel Greathammer added

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -210,6 +210,7 @@
   "item.simplyswords.mythicmetals_compat.bronze.bronze_warglaive": "Bronze Warglaive",
 
   "item.simplyswords.mythicmetals_compat.copper.copper_longsword": "Copper Longsword",
+  "item.simplyswords.mythicmetals_compat.durasteel.durasteel_greathammer": "Durasteel Greathammer",
 
 
 
