--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -60,6 +60,7 @@
   "item.simplyswords.gold_greataxe": "Gold Greataxe",
   "item.simplyswords.diamond_greataxe": "Diamond Greataxe",
   "item.simplyswords.netherite_greataxe": "Netherite Greataxe",
+  "item.simplyswords.iron_chakram": "Iron Chakram",
   "item.simplyswords.storms_edge": "Storm's Edge",
   "item.simplyswords.stormbringer": "Stormbringer",
   "item.simplyswords.sword_on_a_stick": "Sword on a Stick",
