--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -81,8 +81,8 @@
   "item.simplyswords.mythicmetals_compat.adamantite.adamantite_twinblade": "Adamantite Twinblade",
   "item.simplyswords.mythicmetals_compat.adamantite.adamantite_warglaive": "Adamantite Warglaive",
   "item.simplyswords.mythicmetals_compat.adamantite.adamantite_greathammer": "Adamantite Greathammer",
-  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_geataxe": "Adamantite Greataxe",
-  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_chakrams": "Adamantite Chakrams",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_greataxe": "Adamantite Greataxe",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_chakram": "Adamantite Chakram",
 
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_claymore": "Aquarium Claymore",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_cutlass": "Aquarium Cutlass",
@@ -95,8 +95,8 @@
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_twinblade": "Aquarium Twinblade",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_warglaive": "Aquarium Warglaive",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_greathammer": "Aquarium Greathammer",
-  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_geataxe": "Aquarium Greataxe",
-  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_chakrams": "Aquarium Chakrams",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_greataxe": "Aquarium Greataxe",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_chakram": "Aquarium Chakram",
 
   "item.simplyswords.mythicmetals_compat.banglum.banglum_claymore": "Banglum Claymore",
   "item.simplyswords.mythicmetals_compat.banglum.banglum_cutlass": "Banglum Cutlass",
@@ -109,8 +109,8 @@
   "item.simplyswords.mythicmetals_compat.banglum.banglum_twinblade": "Banglum Twinblade",
   "item.simplyswords.mythicmetals_compat.banglum.banglum_warglaive": "Banglum Warglaive",
   "item.simplyswords.mythicmetals_compat.banglum.banglum_greathammer": "Banglum Greathammer",
-  "item.simplyswords.mythicmetals_compat.banglum.banglum_geataxe": "Banglum Greataxe",
-  "item.simplyswords.mythicmetals_compat.banglum.banglum_chakrams": "Banglum Chakrams",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_greataxe": "Banglum Greataxe",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_chakram": "Banglum Chakram",
 
   "item.simplyswords.mythicmetals_compat.carmot.carmot_claymore": "Carmot Claymore",
   "item.simplyswords.mythicmetals_compat.carmot.carmot_cutlass": "Carmot Cutlass",
@@ -123,8 +123,8 @@
   "item.simplyswords.mythicmetals_compat.carmot.carmot_twinblade": "Carmot Twinblade",
   "item.simplyswords.mythicmetals_compat.carmot.carmot_warglaive": "Carmot Warglaive",
   "item.simplyswords.mythicmetals_compat.carmot.carmot_greathammer": "Carmot Greathammer",
-  "item.simplyswords.mythicmetals_compat.carmot.carmot_geataxe": "Carmot Greataxe",
-  "item.simplyswords.mythicmetals_compat.carmot.carmot_chakrams": "Carmot Chakrams",
+  "item.simplyswords.mythicmetals_compat.carmot.carmot_greataxe": "Carmot Greataxe",
+  "item.simplyswords.mythicmetals_compat.carmot.carmot_chakram": "Carmot Chakram",
 
   "item.simplyswords.mythicmetals_compat.kyber.kyber_claymore": "Kyber Claymore",
   "item.simplyswords.mythicmetals_compat.kyber.kyber_cutlass": "Kyber Cutlass",
@@ -137,8 +137,8 @@
   "item.simplyswords.mythicmetals_compat.kyber.kyber_twinblade": "Kyber Twinblade",
   "item.simplyswords.mythicmetals_compat.kyber.kyber_warglaive": "Kyber Warglaive",
   "item.simplyswords.mythicmetals_compat.kyber.kyber_greathammer": "Kyber Greathammer",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_geataxe": "Kyber Greataxe",
-  "item.simplyswords.mythicmetals_compat.kyber.kyber_chakrams": "Kyber Chakrams",
+  "item.simplyswords.mythicmetals_compat.kyber.kyber_greataxe": "Kyber Greataxe",
+  "item.simplyswords.mythicmetals_compat.kyber.kyber_chakram": "Kyber Chakram",
 
   "item.simplyswords.mythicmetals_compat.mythril.mythril_claymore": "Mythril Claymore",
   "item.simplyswords.mythicmetals_compat.mythril.mythril_cutlass": "Mythril Cutlass",
@@ -151,8 +151,8 @@
   "item.simplyswords.mythicmetals_compat.mythril.mythril_twinblade": "Mythril Twinblade",
   "item.simplyswords.mythicmetals_compat.mythril.mythril_warglaive": "Mythril Warglaive",
   "item.simplyswords.mythicmetals_compat.mythril.mythril_greathammer": "Mythril Greathammer",
-  "item.simplyswords.mythicmetals_compat.mythril.mythril_geataxe": "Mythril Greataxe",
-  "item.simplyswords.mythicmetals_compat.mythril.mythril_chakrams": "Mythril Chakrams",
+  "item.simplyswords.mythicmetals_compat.mythril.mythril_greataxe": "Mythril Greataxe",
+  "item.simplyswords.mythicmetals_compat.mythril.mythril_chakram": "Mythril Chakram",
 
   "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_claymore": "Orichalcum Claymore",
   "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_cutlass": "Orichalcum Cutlass",
@@ -165,8 +165,8 @@
   "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_twinblade": "Orichalcum Twinblade",
   "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_warglaive": "Orichalcum Warglaive",
   "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_greathammer": "Orichalcum Greathammer",
-  "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_geataxe": "Orichalcum Greataxe",
-  "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_chakrams": "Orichalcum Chakrams",
+  "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_greataxe": "Orichalcum Greataxe",
+  "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_chakram": "Orichalcum Chakram",
 
   "item.simplyswords.mythicmetals_compat.osmium.osmium_claymore": "Osmium Claymore",
   "item.simplyswords.mythicmetals_compat.osmium.osmium_cutlass": "Osmium Cutlass",
@@ -179,8 +179,8 @@
   "item.simplyswords.mythicmetals_compat.osmium.osmium_twinblade": "Osmium Twinblade",
   "item.simplyswords.mythicmetals_compat.osmium.osmium_warglaive": "Osmium Warglaive",
   "item.simplyswords.mythicmetals_compat.osmium.osmium_greathammer": "Osmium Greathammer",
-  "item.simplyswords.mythicmetals_compat.osmium.osmium_geataxe": "Osmium Greataxe",
-  "item.simplyswords.mythicmetals_compat.osmium.osmium_chakrams": "Osmium Chakrams",
+  "item.simplyswords.mythicmetals_compat.osmium.osmium_greataxe": "Osmium Greataxe",
+  "item.simplyswords.mythicmetals_compat.osmium.osmium_chakram": "Osmium Chakram",
 
   "item.simplyswords.mythicmetals_compat.prometheum.prometheum_claymore": "Prometheum Claymore",
   "item.simplyswords.mythicmetals_compat.prometheum.prometheum_cutlass": "Prometheum Cutlass",
@@ -193,8 +193,8 @@
   "item.simplyswords.mythicmetals_compat.prometheum.prometheum_twinblade": "Prometheum Twinblade",
   "item.simplyswords.mythicmetals_compat.prometheum.prometheum_warglaive": "Prometheum Warglaive",
   "item.simplyswords.mythicmetals_compat.prometheum.prometheum_greathammer": "Prometheum Greathammer",
-  "item.simplyswords.mythicmetals_compat.prometheum.prometheum_geataxe": "Prometheum Greataxe",
-  "item.simplyswords.mythicmetals_compat.prometheum.prometheum_chakrams": "Prometheum Chakrams",
+  "item.simplyswords.mythicmetals_compat.prometheum.prometheum_greataxe": "Prometheum Greataxe",
+  "item.simplyswords.mythicmetals_compat.prometheum.prometheum_chakram": "Prometheum Chakram",
 
   "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_claymore": "Quadrillum Claymore",
   "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_cutlass": "Quadrillum Cutlass",
@@ -207,8 +207,8 @@
   "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_twinblade": "Quadrillum Twinblade",
   "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_warglaive": "Quadrillum Warglaive",
   "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_greathammer": "Quadrillum Greathammer",
-  "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_geataxe": "Quadrillum Greataxe",
-  "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_chakrams": "Quadrillum Chakrams",
+  "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_greataxe": "Quadrillum Greataxe",
+  "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_chakram": "Quadrillum Chakram",
 
   "item.simplyswords.mythicmetals_compat.runite.runite_claymore": "Runite Claymore",
   "item.simplyswords.mythicmetals_compat.runite.runite_cutlass": "Runite Cutlass",
@@ -221,8 +221,8 @@
   "item.simplyswords.mythicmetals_compat.runite.runite_twinblade": "Runite Twinblade",
   "item.simplyswords.mythicmetals_compat.runite.runite_warglaive": "Runite Warglaive",
   "item.simplyswords.mythicmetals_compat.runite.runite_greathammer": "Runite Greathammer",
-  "item.simplyswords.mythicmetals_compat.runite.runite_geataxe": "Runite Greataxe",
-  "item.simplyswords.mythicmetals_compat.runite.runite_chakrams": "Runite Chakrams",
+  "item.simplyswords.mythicmetals_compat.runite.runite_greataxe": "Runite Greataxe",
+  "item.simplyswords.mythicmetals_compat.runite.runite_chakram": "Runite Chakram",
 
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_claymore": "Star Platinum Claymore",
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_cutlass": "Star Platinum Cutlass",
@@ -235,8 +235,8 @@
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_twinblade": "Star Platinum Twinblade",
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_warglaive": "Star Platinum Warglaive",
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_greathammer": "Star Platinum Greathammer",
-  "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_geataxe": "Star Platinum Greataxe",
-  "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_chakrams": "Star Platinum Chakrams",
+  "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_greataxe": "Star Platinum Greataxe",
+  "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_chakram": "Star Platinum Chakram",
 
   "item.simplyswords.mythicmetals_compat.bronze.bronze_claymore": "Bronze Claymore",
   "item.simplyswords.mythicmetals_compat.bronze.bronze_cutlass": "Bronze Cutlass",
@@ -249,8 +249,8 @@
   "item.simplyswords.mythicmetals_compat.bronze.bronze_twinblade": "Bronze Twinblade",
   "item.simplyswords.mythicmetals_compat.bronze.bronze_warglaive": "Bronze Warglaive",
   "item.simplyswords.mythicmetals_compat.bronze.bronze_greathammer": "Bronze Greathammer",
-  "item.simplyswords.mythicmetals_compat.bronze.bronze_geataxe": "Bronze Greataxe",
-  "item.simplyswords.mythicmetals_compat.bronze.bronze_chakrams": "Bronze Chakrams",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_greataxe": "Bronze Greataxe",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_chakram": "Bronze Chakram",
 
   "item.simplyswords.mythicmetals_compat.palladium.palladium_claymore": "Palladium Claymore",
   "item.simplyswords.mythicmetals_compat.palladium.palladium_cutlass": "Palladium Cutlass",
@@ -263,8 +263,8 @@
   "item.simplyswords.mythicmetals_compat.palladium.palladium_twinblade": "Palladium Twinblade",
   "item.simplyswords.mythicmetals_compat.palladium.palladium_warglaive": "Palladium Warglaive",
   "item.simplyswords.mythicmetals_compat.palladium.palladium_greathammer": "Palladium Greathammer",
-  "item.simplyswords.mythicmetals_compat.palladium.palladium_geataxe": "Palladium Greataxe",
-  "item.simplyswords.mythicmetals_compat.palladium.palladium_chakrams": "Palladium Chakrams",
+  "item.simplyswords.mythicmetals_compat.palladium.palladium_greataxe": "Palladium Greataxe",
+  "item.simplyswords.mythicmetals_compat.palladium.palladium_chakram": "Palladium Chakram",
 
   "item.simplyswords.mythicmetals_compat.stormyx.stormyx_claymore": "Stormyx Claymore",
   "item.simplyswords.mythicmetals_compat.stormyx.stormyx_cutlass": "Stormyx Cutlass",
@@ -277,8 +277,8 @@
   "item.simplyswords.mythicmetals_compat.stormyx.stormyx_twinblade": "Stormyx Twinblade",
   "item.simplyswords.mythicmetals_compat.stormyx.stormyx_warglaive": "Stormyx Warglaive",
   "item.simplyswords.mythicmetals_compat.stormyx.stormyx_greathammer": "Stormyx Greathammer",
-  "item.simplyswords.mythicmetals_compat.stormyx.stormyx_geataxe": "Stormyx Greataxe",
-  "item.simplyswords.mythicmetals_compat.stormyx.stormyx_chakrams": "Stormyx Chakrams",
+  "item.simplyswords.mythicmetals_compat.stormyx.stormyx_greataxe": "Stormyx Greataxe",
+  "item.simplyswords.mythicmetals_compat.stormyx.stormyx_chakram": "Stormyx Chakram",
 
   "item.simplyswords.mythicmetals_compat.steel.steel_claymore": "Steel Claymore",
   "item.simplyswords.mythicmetals_compat.steel.steel_cutlass": "Steel Cutlass",
@@ -291,8 +291,8 @@
   "item.simplyswords.mythicmetals_compat.steel.steel_twinblade": "Steel Twinblade",
   "item.simplyswords.mythicmetals_compat.steel.steel_warglaive": "Steel Warglaive",
   "item.simplyswords.mythicmetals_compat.steel.steel_greathammer": "Steel Greathammer",
-  "item.simplyswords.mythicmetals_compat.steel.steel_geataxe": "Steel Greataxe",
-  "item.simplyswords.mythicmetals_compat.steel.steel_chakrams": "Steel Chakrams",
+  "item.simplyswords.mythicmetals_compat.steel.steel_greataxe": "Steel Greataxe",
+  "item.simplyswords.mythicmetals_compat.steel.steel_chakram": "Steel Chakram",
 
   "item.simplyswords.mythicmetals_compat.celestium.celestium_claymore": "Celestium Claymore",
   "item.simplyswords.mythicmetals_compat.celestium.celestium_cutlass": "Celestium Cutlass",
@@ -305,8 +305,8 @@
   "item.simplyswords.mythicmetals_compat.celestium.celestium_twinblade": "Celestium Twinblade",
   "item.simplyswords.mythicmetals_compat.celestium.celestium_warglaive": "Celestium Warglaive",
   "item.simplyswords.mythicmetals_compat.celestium.celestium_greathammer": "Celestium Greathammer",
-  "item.simplyswords.mythicmetals_compat.celestium.celestium_geataxe": "Celestium Greataxe",
-  "item.simplyswords.mythicmetals_compat.celestium.celestium_chakrams": "Celestium Chakrams",
+  "item.simplyswords.mythicmetals_compat.celestium.celestium_greataxe": "Celestium Greataxe",
+  "item.simplyswords.mythicmetals_compat.celestium.celestium_chakram": "Celestium Chakram",
 
   "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_claymore": "Metallurgium Claymore",
   "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_cutlass": "Metallurgium Cutlass",
@@ -319,8 +319,8 @@
   "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_twinblade": "Metallurgium Twinblade",
   "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_warglaive": "Metallurgium Warglaive",
   "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_greathammer": "Metallurgium Greathammer",
-  "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_geataxe": "Metallurgium Greataxe",
-  "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_chakrams": "Metallurgium Chakrams",
+  "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_greataxe": "Metallurgium Greataxe",
+  "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_chakram": "Metallurgium Chakram",
 
   "item.simplyswords.mythicmetals_compat.copper.copper_longsword": "Copper Longsword",
   "item.simplyswords.mythicmetals_compat.durasteel.durasteel_greathammer": "Durasteel Greathammer",
