Unique weapon Mjolnir added Runic chakram added Magic Estoc (partially) added New chakram model added Sound registry implemented

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -64,10 +64,13 @@
   "item.simplyswords.gold_chakram": "Gold Chakram",
   "item.simplyswords.diamond_chakram": "Diamond Chakram",
   "item.simplyswords.netherite_chakram": "Netherite Chakram",
+  "item.simplyswords.runic_chakram": "Runic Chakram",
   "item.simplyswords.storms_edge": "Storm's Edge",
   "item.simplyswords.stormbringer": "Stormbringer",
   "item.simplyswords.sword_on_a_stick": "Sword on a Stick",
   "item.simplyswords.bramblethorn": "Bramblethorn",
+  "item.simplyswords.magic_estoc": "Enchanted Estoc",
+  "item.simplyswords.mjolnir": "Mjolnir",
 
 
   "item.simplyswords.mythicmetals_compat.adamantite.adamantite_claymore": "Adamantite Claymore",
